# shellcheck

./: .gitignore  .hlint.yaml  CHANGELOG.md  ShellCheck.cabal  package.yaml  shellcheck-dev.hs  shellcheck.hs  stack.yaml
.github/workflows/: build.yml
builders/linux.aarch64/: Dockerfile
builders/linux.riscv64/: Dockerfile
src/ShellCheck/: AST.hs  ASTLib.hs  Analytics.hs  Analyzer.hs  AnalyzerLib.hs  CFG.hs  CFGAnalysis.hs  Checker.hs  Data.hs  Debug.hs  Fixer.hs  Interface.hs  Parser.hs  Prelude.hs  Regex.hs
src/ShellCheck/Checks/: Commands.hs  ControlFlow.hs  Custom.hs  ShellSupport.hs
src/ShellCheck/Formatter/: CheckStyle.hs  Diff.hs  Format.hs  GCC.hs  JSON.hs  JSON1.hs  Quiet.hs  TTY.hs
test/: buildtest  shellcheck.hs
